# api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
deployment/app/: app-deployment.yaml  app-service.yaml
deployment/db/: db-deployment.yaml  db-namespace.yaml  db-service.yaml
docker/: docker-compose.yml  init.sql
src/: auth.rs  auth_controller.rs  controller.rs  main.rs  middleware.rs  model.rs  user_service.rs
