[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenv = "0.15.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "macros", "runtime-tokio-native-tls"]}
tokio = {version = "1.48.0", features = ["full"]}
