[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = {version = "0.10.0", features = ["typed-header"]}
bcrypt = "0.16.0"
chrono = {version = "0.4.40", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "macros", "runtime-tokio-native-tls", "chrono"]}
tokio = {version = "1.48.0", features = ["full"]}
